--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -29,7 +29,7 @@
   var wb = new F1.WorldBank();
   <% unless @country[:name] == "World" %>
   var projects = [<% @country[:project_list].each do |project_id, project| %>
-        {<%= PROJECT_FIELDS.collect {|key| "#{key}: #{cleanup_attributes(key, project[key])}"}.join(",") %>},
+        {<%= (PROJECT_FIELDS + ["sector_code"]).flatten.collect {|key| "#{key}: #{cleanup_attributes(key, project[ key == 'sector_code' ? 'mjsector1' : key])}"}.join(",") %>},
       <% end %>];
   <% else %>
   var projects = [];
