--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -54,7 +54,12 @@ if(typeof(F1)=='undefined') {F1 = {}}
       this.activities = {};
       this.projects = country_attrs.projects;
       this.visibleSectors = [];
-      this.sectors = {};
+      
+      if(country_attrs.regions != null)
+        this.regions = country_attrs.regions;
+      else
+        this.regions = {};
+        
       this.total_funding = 0;
       this.stylelayers = {};
       this.initialized = false;
@@ -62,7 +67,6 @@ if(typeof(F1)=='undefined') {F1 = {}}
       this.current_projects = true;
       this.region = region;
       this.country_attrs = country_attrs;
-            
       // icons = {};
       // jq.each(self.sectors, function(sector) {
       //   icons[self.sectors[sector].name] = self.sectors[sector].icon;
@@ -81,10 +85,14 @@ if(typeof(F1)=='undefined') {F1 = {}}
         "public": {name: "Public Administration, Law, and Justice", sector_code: "PX", color: self.fadeHex("#8060a4","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "public", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/public-on.png"},
         "water": {name: "Water, Sanitation, and Flood Protection", sector_code: "WX", color: self.fadeHex("#369fd0","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "water", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/water-on.png"},
         "transportation": {name: "Transportation", sector_code: "TX", color: self.fadeHex("#d28807","#FFFFFF",10)[color_index], funding: 0, projects: [], activities: 0, shortname: "transportation", icon: "<%= PLATFORM_API_URL %>/images/icons/worldbank/transportation-on.png"}};
-        
+
       this.sector_names = {};
       this.sector_codes = {};
-      jq.each(self.sectors, function(index, sector) { 
+      jq.each(self.sectors, function(index, sector) {
+          if(country_attrs.sectors != null && country_attrs.sectors[sector.name] != null) { 
+            sector.funding = country_attrs.sectors[sector.name];
+            self.total_funding += country_attrs.sectors[sector.name];
+          }
           self.sector_names[sector.name] = index; 
           self.sector_codes[sector.sector_code] = sector;
      });
@@ -141,6 +149,10 @@ if(typeof(F1)=='undefined') {F1 = {}}
       var self = this;
       var visibleExpression = "";
 
+      // World Map
+      if(self.stylelayers["Project Locations"] == null)
+        return;
+        
       self.current_projects = visible;
       
       if(sector == "none") {
@@ -430,10 +442,11 @@ if(typeof(F1)=='undefined') {F1 = {}}
             projects.sort(function (a, b) {
                 return b.funding - a.funding;
             });        
-            jq.each(projects, function (index,project) { 
+            jq.each(projects, function (index,project) {
                 links.push("javascript:wb.sectorPieChart('" + self.sector_codes[project.sector_code].shortname + "', true);");  
                 colors.push(project.color)
-                labels.push(project.name + " - $" + project.funding + "m" )
+                var financing = project.funding > 1000 ? project.funding/1000 + "b" : project.funding + "m"
+                labels.push(project.name + " - $" + financing )
             });
 
             pie_options = {"features":projects, 
@@ -442,9 +455,12 @@ if(typeof(F1)=='undefined') {F1 = {}}
             "sort":{"name": "Funding","original_name": "funding"} }};
             
             funding = self.total_funding;
-            opts["chart"] = {"colors": colors, "legend": labels, onclick: function() {wb.toggleSector(links[this.bar.index]);}};
-            
-            jq('#sector_funding_total').html("$" + funding + " Million");
+            opts["chart"] = {"colors": colors, "legend": labels};
+            if(self.stylelayers["Project Locations"] != null)
+                opts["chart"]["onclick"] = function() {wb.toggleSector(links[this.bar.index])};
+                 
+            var financing_total = funding > 1000 ? funding/1000 + " Billion" : funding + " Million";
+            jq('#sector_funding_total').html("$" + financing_total + " <span class='subtotal' title='Global Financing'>/ $136.912 Billion</span>");
             jq('#sector_funding_title').html("Financing for " + sector_names + " Sectors")
 
         } else {
@@ -465,7 +481,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
             funding = self.sectors[sector_name].funding;
 
             var links = jq.map(projects, function (project,index) { 
-                labels.push(project.project_name + " - $" + project.totalamt + "m" )
+                labels.push(Textify.elide_during(project.project_name, 35, '...'   ) + " - $" + project.totalamt + "m" )
                 return "javascript:wb.highlightProject('" + project["id"] + "');";  
             });
 
@@ -476,7 +492,9 @@ if(typeof(F1)=='undefined') {F1 = {}}
             
             sector_names = wb.sectors[sector_name].name;
             opts["chart"] = {legend: labels, colors: self.fadeHex(self.sectors[sector_name].color, "#ffffff", 8)}
-            jq('#sector_funding_total').html("$" + funding + " Million <span class='subtotal'>/ $"+wb.total_funding +" million</span>");
+            var financing_total = self.total_funding > 1000 ? self.total_funding/1000 + " Billion" : self.total_funding + " Million"
+
+            jq('#sector_funding_total').html("$" + funding + " Million <span class='subtotal' title='National Financing'>/ $"+ financing_total + "</span>");
             jq('#sector_funding_title').html("Financing for " + sector_names + " Sector")
         }
 
@@ -497,28 +515,27 @@ if(typeof(F1)=='undefined') {F1 = {}}
             F1.Visualizer.charts.pie(180, 505, pie_options, "chart-left-pie-chart", opts);        
 
     },
-    sectorFundingBars: function() {
+    regionFundingBars: function() {
       var self = this;
       var s;
       var features = [];
       var links = [];
+      var labels = [];
+      jq.each(self.regions, function(s, financing) {
+        features.push({name: s, financing: financing});
+        labels.push(s)
+        links.push("#" + s);
+      });
 
-      for(s in self.sectors) { 
-        features.push(self.sectors[s]);
-        links.push( self.sectors[s]["shortname"] );
-      }
-
-      jq('#funding_total').html("$" + self.total_funding.toFixed(1) + " Million");
+      jq('#funding_total').hide();
       
       bar_options = {"features":features, "attributes": {
-          "data":{"name": "Total Amount", "original_name": "funding"}, 
-          "description":{"name": "Sector", "original_name": "name"}, 
-          "sort":{"name": "Total Amount","original_name": "funding"} } };
-      F1.Visualizer.charts.bar(180, 405, bar_options, "chart-right-graph", {href: links, label: function() {
+          "data":{"name": "Financing Amount $m", "original_name": "financing"}, 
+          "description":{"name": "Region", "original_name": "name"}, 
+          "sort":{"name": "Financing Amount $m","original_name": "financing"} } };
+      F1.Visualizer.charts.bar(180, 405, bar_options, "chart-right-graph", {href: links, data_label: true, labels: labels ,label: function() {
           return links[this.bar.index];
-      }, onclick: function() {
-          wb.toggleSector(links[this.bar.index]);
-          }});
+      }});
     },
     projectFundingBars: function() {
       var self = this;
@@ -526,11 +543,13 @@ if(typeof(F1)=='undefined') {F1 = {}}
       var features = [];
       var links = [];
       var colors = [];
+
       jq.each(self.projects, function(index, project) {
         features.push(project);
         links.push( "javascript:wb.highlightProject('" + project["id"] + "');"  );
         colors.push(self.sector_codes[project.sector_code].color);
       });
+      console.log(colors)
 
       jq('#funding_total').html("$" + self.total_funding.toFixed(1) + " Million");
       
@@ -568,8 +587,6 @@ if(typeof(F1)=='undefined') {F1 = {}}
         // we'll set the title & subtitle later
       });
 
-       
-       
       jq('#download_data').attr('href','<%= PLATFORM_API_URL %>/datasets/' + self.stylelayers["Project Locations"].source.replace("finder:","")  + ".csv")
        return false;
     },
@@ -627,9 +644,11 @@ if(typeof(F1)=='undefined') {F1 = {}}
       var self = this;
       self.highlightRegions(["Kenya","Philippines","Bolivia"]);
       jq('#project_count').html(self.country_attrs["projects_count"]);
-      jq('#activity_count').html("12,000");
-
-      self.map.swf.addLayerInfoWindowFilter(1, {title: "$[project_n0]", subtitle: "$[mjsector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[id0]'>$[id0]</a>\nProject Name: $[project_n0]\nSector:$[mjsector1]\nTotal Amount: $ $[totalamt0] million"}]});
+      jq('#activity_count').html(self.country_attrs["locations_count"]);
+      self.sectorPieChart("all", false);
+      self.regionFundingBars();
+      
+      // self.map.swf.addLayerInfoWindowFilter(1, {title: "$[project_n0]", subtitle: "$[mjsector1]", tabs:[{title: "Financing", type: "text", value:"Project ID: <a target='_new' href='http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=$[id0]'>$[id0]</a>\nProject Name: $[project_n0]\nSector:$[mjsector1]\nTotal Amount: $ $[totalamt0] million"}]});
 
 
       self.map.swf.addLayerInfoWindowFilter(0, {title: "$[Country_1]", subtitle: "$[count] Projects", tabs: [{title:"About", type: "text", value: "There are currently $[count] active World Bank projects in $[Country_1].\n\nYou can explore the growing list of available project profiles in countries through the 'Locations' option at the bottom of the map."}]});
