Cleaning up IE issues

--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -2,7 +2,7 @@
   <ul>
     <li class="">
     <% unless @country[:name] == "World" %>Choose the indicator data and portfolio projects below to investigate mapping for results:<% else %>
-    There are currently several countries available in "Locations" below, and more being added continuously.<% end %></li>
+    Investigate World Bank projects in currently highlighted countries using "Locations" tab.<% end %></li>
   </ul>
 </div>
 <div class="dropmenuholder">
