Adding in a demo project page

--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -21,13 +21,13 @@
 
 <%= partial :charts %>
 
-<%= partial :projects_table unless @country[:name] == "World" %>
+<%= partial :projects_table unless @country[:name] == "World" || !@region.nil? %>
 
 <script type="text/javascript" charset="utf-8">
 
 
   var wb = new F1.WorldBank();
-  <% unless @country[:name] == "World" %>
+  <% unless @country[:name] == "World" || @country[:adm1].length == 0 %>
   var projects = [<%= @country[:project_list].collect do |project_id, project|
          "{" + (PROJECT_FIELDS + ["sector_code"]).flatten.collect {|key| "#{key}: #{cleanup_attributes(key, project[ key == 'sector_code' ? 'mjsector1' : key])}"}.join(",") + "}"
        end.join(",") %>];
