Adding Omniture and SEO on titles

--- a/m4r/views/index.erb
+++ b/m4r/views/index.erb
@@ -1,3 +1,4 @@
+<% @page_subtitle = ", " + [@country[:region],@country[:name]].compact.join(", ") %>
 <%# partial :map %>
 <%= partial :map_header %>
 <div id="map-content">
