--- a/m4r/views/about.erb
+++ b/m4r/views/about.erb
@@ -1,3 +1,4 @@
+<% @page_subtitle = ", About the Platform" %>
 <div class="static_display">
   <h4>About Mapping For Results</h4>
   <ul>
@@ -220,7 +221,7 @@
 	<h1 id="Feedback">Feedback<a href="#Feedback" class="wiki-anchor"></a></h1>
 
 
-	<p>In order to improve our Mapping for Results Platform, we are very interested in your feedback. Please email us with your questions and comments at <a class="email" href="mailto:mappingforresults@worldbank.org">mappingforresults@worldbank.org</a></p>
+	<p>In order to improve our Mapping for Results Platform, we are very interested in your feedback. Please email us with your questions and comments at <a class="email" href="mailto:maps@worldbank.org">maps@worldbank.org</a></p>
 
 
 	<p>Comment on our <a href="http://blogs.worldbank.org/dmblog/node/733" class="external">blog</a>.</p>
