--- a/m4r/views/footer.erb
+++ b/m4r/views/footer.erb
@@ -31,10 +31,11 @@
   <div id="share-pane">
     <span class="close">Close</span>
     <ul class="links">
-      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+http%3A%2F%2Fmaps.worldbank.org" target="_new">Twitter</a></li>
-      <li class="facebook"><a href="http://facebook.com/share.php?u=http%3A%2F%2Fmaps.worldbank.org" target="_new">Facebook</a></li>
-      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=http%3A%2F%2Fmaps.worldbank.org" target="_new">Delicious</a></li>
-      <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28http%3A%2F%2Fmaps.worldbank.org">E-Mail</a></li>
+      <% link = "http%3A%2F%2Fmaps.worldbank.org%2F#{[params[:region] || nil,@country.nil? ? nil : @country[:name].downcase].compact.join("%2F")}" %>
+      <li class="twitter first"><a href="http://twitter.com/?status=World+Bank+Maps+<%= link %>"  target="_new">Twitter</a></li>
+      <li class="facebook"><a href="http://facebook.com/share.php?u=<%= link %>" target="_new">Facebook</a></li>
+      <li class="delicious"><a href="http://delicious.com/save?v=5&noui&jump=close&url=<%= link %>" target="_new">Delicious</a></li>
+      <li class="email last"><a href="mailto:?Subject=World%20Bank%20Maps&Body=World%20Bank%20Maps%20%28<%= link %>">E-Mail</a></li>
     </ul>
   </div>
   <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
