--- a/m4r/views/layer_controls.erb
+++ b/m4r/views/layer_controls.erb
@@ -38,10 +38,10 @@
     <li class="first" title="Layer: Projects"><a href="#" id="layercontrol_projects" onclick="return wb.toggleSector('none',false)">PROJECTS</a>
       <% unless @country[:name] == "World" || (@region == @country) %>
       <ul>
-        <li><a href="#" onclick="return wb.toggleSector('counts_admin1', true)">Number by Province</a></li>
-        <li><a href="#" onclick="return wb.toggleSector('counts_admin2', true)">Number by District</a></li>
-        <li><a href="#" onclick="return wb.toggleSector('all', true)">All Projects</a></li>
-        <li><a href="#" onclick="return wb.toggleSector('none',false)">No Projects</a></li>
+        <li><a href="#" onclick="wb.toggleSector('counts_admin1', true); return false">Number by Province</a></li>
+        <li><a href="#" onclick="wb.toggleSector('counts_admin2', true); return false">Number by District</a></li>
+        <li><a href="#" onclick="wb.toggleSector('all', true); return false">All Projects</a></li>
+        <li><a href="#" onclick="wb.toggleSector('none',false); return false">No Projects</a></li>
       </ul>
       <% end %>
     </li>
