--- a/m4r/views/map.erb
+++ b/m4r/views/map.erb
@@ -1,21 +1,28 @@
 var proxy_host = "<%= PLATFORM_API_URL %>";    
 var project_attributes = ["id","project_name","totalamt","mjsector1","boardapprovaldate","majorsector_percent"]
 
-if(typeof(F1)=='undefined') {F1 = {}}
+if(typeof(F1)=='undefined') {F1 = {};}
 (function(){
     
+
+    if(typeof String.prototype.trim != 'function') {
+      String.prototype.trim = function() {
+        return this.replace(/^\s+|\s+$/g, '');
+      }
+    }
+
 
   Object.size = function(obj) {
       var size = 0, key;
       for (key in obj) {
-          if (obj.hasOwnProperty(key)) size++;
+          if (obj.hasOwnProperty(key)) { size++; }
       }
       return size;
   };
 
   Object.include = function(arr, obj) {
     for(var i=0; i<arr.length; i++) {
-      if (arr[i] == obj) return i;
+      if (arr[i] == obj) { return i; }
     }
     return null;
   }
@@ -36,15 +43,15 @@ if(typeof(F1)=='undefined') {F1 = {}}
   F1.WorldBank = function(options) {  //constructor
     this.options = options;
     // F1.WorldBank.instances[options.id] = this;
-  }
+  };
 
   F1.WorldBank.indicators = {
-    "Poverty": {source: "finder:", title:"Poverty", subtitle: "Headcount Index", styles: { type: "CHOROPLETH",fill: { colors: [16709541,16698989,15500308,11422722,6694150], categories: 5, classificationNumClasses: 6, classificationType: "St Dev", opacity: 0.75, selectedAttribute: "poverty" }}, infosubtitle: null, table: null, description: "<p>These data sets involve econometric or quantitative indirect estimation procedures that combine spatial precision (such as censuses) with substantive depth (such as surveys). They have been developed and implemented by the World Bank Development Economics Research Group and colleagues, in collaboration with country teams for the implementation of Poverty Reduction Strategy Programmes.</p><p>Though spatial information may be used in the process of generating these estimates, the spatial data is generally separated prior to the analysis, reporting and dissemination of the poverty estimates. Thus, CIESIN’s database of sub-national small area estimates contains poverty and inequality data with reconstructed boundary information, using basic geographic information system (GIS) tools. (Text obtained from the source of data at <a href='http://sedac.ciesin.columbia.edu/povmap/methods_nat_sae.jsp'>CIESIN</a>)</p><p>Source: <a href='http://www.measuredhs.com/'>Demographic and Health Surveys (DHS)</a></p>"},
+    "Poverty": {source: "finder:", title:"Poverty", subtitle: "Headcount Index", styles: { type: "CHOROPLETH",fill: { colors: [16709541,16698989,15500308,11422722,6694150], categories: 5, classificationNumClasses: 6, classificationType: "St Dev", opacity: 0.75, selectedAttribute: "poverty" }}, infosubtitle: null, table: null, description: "<p>These data sets involve econometric or quantitative indirect estimation procedures that combine spatial precision (such as censuses) with substantive depth (such as surveys). They have been developed and implemented by the World Bank Development Economics Research Group and colleagues, in collaboration with country teams for the implementation of Poverty Reduction Strategy Programmes.</p><p>Though spatial information may be used in the process of generating these estimates, the spatial data is generally separated prior to the analysis, reporting and dissemination of the poverty estimates. Thus, CIESIN's database of sub-national small area estimates contains poverty and inequality data with reconstructed boundary information, using basic geographic information system (GIS) tools. (Text obtained from the source of data at <a href='http://sedac.ciesin.columbia.edu/povmap/methods_nat_sae.jsp'>CIESIN</a>)</p><p>Source: <a href='http://www.measuredhs.com/'>Demographic and Health Surveys (DHS)</a></p>"},
     "Malnutrition": {source: "finder:", title:"Child Malnutrition", subtitle: "Percentile weight of Children under 5", styles: { type: "CHOROPLETH", stroke: {color: 0x222222}, fill: { colors: [15456706, 13744031, 10782317, 8151635, 4863020], categories: 5, classificationNumClasses: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "WFAB2SD" }}, infosubtitle: null, table: null, description: "Prevalence of child malnutrition is the percentage of children under age 5 whose weight for age is more than two standard deviations below the median for the international reference population ages 0-59 months. The data are based on the WHO's new child growth standards released in 2006.\nSource: World Health Organization, Global Database on Child Growth and Malnutrition.\nCatalog Sources: World Development Indicators"},
     "Infant Mortality": {source: "finder:", title:"Infant Mortality Rate", subtitle: "Per 1,000 live births", styles: { type: "CHOROPLETH", stroke: {color: 0x222222}, fill: { colors: [0xFEE5D9, 0xFCAE91, 0xFB6A4A, 0xDE2D26, 0xA50F15], categories: 5, classificationNumClasses: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "IM1q0"}}, infosubtitle: null, table: null, description: "Mortality rate, infant (per 1,000 live births) Infant mortality rate is the number of infants dying before reaching one year of age, per 1,000 live births in a given year.\nSource: Inter-agency Group for Child Mortality Estimation (UNICEF, WHO, World Bank, UNPD, universities and research institutions).\nCatalog Source: World Development Indicators"},  
     "Maternal Health": {source: "finder:", title:"Births attended by skilled health staff ", subtitle: "% of Total", styles: { type: "CHOROPLETH",stroke: {color: 0x222222}, fill: { colors: [5313667, 8608676, 12619965, 14924738, 16573399], categories: 5, classificationNumClasses: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "DBHP"}}, infosubtitle: null,table: null, description: "Births attended by skilled health staff (% of total), are the percentage of deliveries attended by personnel trained to give the necessary supervision, care, and advice to women during pregnancy, labor, and the postpartum period; to conduct deliveries on their own; and to care for newborns.\nSource: UNICEF, State of the World's Children, Childinfo, and Demographic and Health Surveys by Macro International."},
     "Population": {source: "finder:", title:"Population", subtitle: "Total Number of People", styles: { type: "CHOROPLETH",stroke: {color: 0x222222}, fill: { colors: [0xEFF3FF, 0xBDD7E7, 0x6BAED6, 0x3182BD, 0x08519C], categories: 5, classificationNumClasses: 5, classificationType: "EQUAL INTERVAL", opacity: 0.75, selectedAttribute: "population from statoids"}}, infosubtitle: null, table: null, description: "The land area of the world is divided into countries (1). Most of the countries are, in turn, divided into smaller units. These units may be called states, provinces, regions, governorates, and so on. A phrase that describes them all is 'major administrative divisions of countries'.\n\nSource: <a href='http://www.statoids.com/ubo.html'>Statoids"}
-	},
+	};
   F1.WorldBank.prototype = {
     init: function(map_id, country, region, country_attrs) {
       
@@ -148,7 +155,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       var self = this;
       var visibleExpression = "";
 
-      if(self.stylelayers["Project Locations"] == null) // World Map
+      if(self.stylelayers["Project Locations"] === null) // World Map
         return;
         
       self.current_projects = visible;
@@ -157,13 +164,13 @@ if(typeof(F1)=='undefined') {F1 = {}}
         self.map.showLayer(self.stylelayers["Project Locations"].order, visible);
         self.map.showLayer(self.stylelayers["Project Counts"].order, visible);        
       } else if(sector == 'all') {
-        if(visible == null)
+        if(visible === null)
           visible = (jq("#sall").is(':checked'));
           
         if(visible) {
           self.map.swf.clearFilters(self.stylelayers["Project Locations"].order);
           jq.each(self.sectors, function(sector) {
-            if(Object.include(self.visibleSectors, sector) == null)
+            if(Object.include(self.visibleSectors, sector) === null)
               self.visibleSectors.push(sector);
           });
         } else {
@@ -191,21 +198,21 @@ if(typeof(F1)=='undefined') {F1 = {}}
       } else if(sector == 'counts') {
         self.map.showLayer(self.stylelayers["Project Counts"].order, visible);
         self.map.showLayer(self.stylelayers["Project Locations"].order, !visible);
-      } else if(sector == null) {
+      } else if(sector === null) {
         self.map.showLayer(self.stylelayers["Project Locations"].order, false);
         self.map.showLayer(self.stylelayers["Project Counts"].order, false);
       } else {
         jq("#sall").attr('checked', false);          
-        if(visible == null)
+        if(visible === null)
           visible = !(jq("#sectorcontrol_" + sector).hasClass('active'));
 
-        if(visible == true){
+        if(visible === true){
           self.map.showLayer(self.stylelayers["Project Counts"].order, false);
           self.map.showLayer(self.stylelayers["Project Locations"].order, false);
           self.map.swf.removeFilter(self.stylelayers["Project Locations"].order, 
           {expression: self.complexSectorExpression(self.visibleSectors)});
 
-          if(Object.include(self.visibleSectors, sector) == null) {
+          if(Object.include(self.visibleSectors, sector) === null) {
             self.visibleSectors.push(sector);    
 
             self.map.swf.addFilter(self.stylelayers["Project Locations"].order, 
@@ -229,7 +236,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       self.setMapTitle();
       self.showVisibleSectors();
 
-      if(refreshCharts == null || refreshCharts == true)
+      if(refreshCharts === null || refreshCharts === true)
         self.sectorPieChart(sector, false);
       return false;
     },
@@ -252,7 +259,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
     complexSectorExpression: function(sectorFilters, sector_attribute) {
       var self = this;
       var expression = "";
-      if(sector_attribute == null)
+      if(sector_attribute === null)
         sector_attribute = "sector1";
         
       for(var sector=0;sector<sectorFilters.length; sector++) {
@@ -265,7 +272,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
     setIndicator: function(indicator,visible) {
       var self = this;
       self.map.showLayer(self.stylelayers[self.current_indicator].order, false);
-      if(indicator == null) {
+      if(indicator === null) {
         jq('#layercontrol_indicators').html("Indicators");
         self.map.showLayer(self.stylelayers[indicator].order, false);
       }
@@ -309,7 +316,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       self.activities = jq.map(data.features, function(feature) { 
         if (feature) {
           attr = feature.attributes;
-          if(self.projects[attr["project id"]] == null) { // first time we've seen this project ID
+          if(self.projects[attr["project id"]] === null) { // first time we've seen this project ID
             var project = {};
 
             // Get the project level attributes
@@ -326,7 +333,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
             var sector_name = project["sector1"];
             var wb_sector = self.sectors[self.sector_names[sector_name.toLowerCase().trim()]];
 
-            if(wb_sector == null)
+            if(wb_sector === null)
               wb_sector = self.sectors["public"];
               
             wb_sector.funding += attr["total amt"];
@@ -346,7 +353,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
       self.activities = jq.map(data, function(feature) { 
         if (feature) {
           attr = feature;
-          if(self.projects[attr["id"]] == null) { // first time we've seen this project ID
+          if(self.projects[attr["id"]] === null) { // first time we've seen this project ID
             var project = {};
 
             // Get the project level attributes
@@ -365,19 +372,19 @@ if(typeof(F1)=='undefined') {F1 = {}}
                 var sector_name = sector["Name"].toLowerCase().trim();
                 var wb_sector = self.sectors[self.sector_names[sector_name]];
 
-                if(wb_sector == null)
+                if(wb_sector === null)
                     wb_sector = self.sectors["public"];
 
-                if(project["sector_funding"] == null)
+                if(project["sector_funding"] === null)
                     project["sector_funding"] = {}
-                if(project["sector_funding"][wb_sector.shortname] == null)
+                if(project["sector_funding"][wb_sector.shortname] === null)
                     project["sector_funding"][wb_sector.shortname] = 0
                 
                 var actual_funding = (parseInt(sector["Percent"],10) / 100.0) * project["totalamt"];
                 project["sector_funding"][wb_sector.shortname] += actual_funding
                 wb_sector.funding += actual_funding
                 // There are duplicates in the Major Sector Percent listings
-                if(Object.include(wb_sector.projects, project) == null)                
+                if(Object.include(wb_sector.projects, project) === null)                
                     wb_sector.projects.push(project);
             });
             self.total_funding += attr["totalamt"];
@@ -433,7 +440,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
         var sector_names = "";
         var opts = {}
         
-        if(refreshControls == null || refreshControls == true){
+        if(refreshControls === null || refreshControls === true){
             self.toggleSector("all", false, false); // watch recursion
             self.toggleSector(sector_name, true,false); // watch recursion
         }
@@ -608,7 +615,7 @@ if(typeof(F1)=='undefined') {F1 = {}}
     },
     highlightRegions: function(regions, region_attr) {
         var self = this;
-        if(region_attr == null)
+        if(region_attr === null)
             region_attr = "Country_1";
         
         self.map.swf.clearHighlights(0);
