Updating Haiti Results links

--- a/m4r/views/map_header.erb
+++ b/m4r/views/map_header.erb
@@ -20,5 +20,5 @@
           </li>
         </ul>
       </div>
-      <%= partial :sector_controls unless @country[:name] == "World" || (@region == @country) %>
+      <%= partial :sector_controls unless @country[:name] == "World" %>
     </div>
